--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,4 @@
-* {
+*:not(.ignore-default) {
 	font-family: "Albert Sans";
 	color: #ffffff;
 }
@@ -66,7 +66,7 @@ header {
 	flex: 2;
 }
 
-.container {
+.container-header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -132,6 +132,14 @@ header {
 	text-transform: uppercase;
 	margin: 0;
 	margin-bottom: 10px;
+}
+
+.box-subtitle {
+	font-size: 14px;
+	color: #fff6;
+	font-style: italic;
+	position: relative;
+	bottom: 5px;
 }
 
 .box-scammer {
