--- a/src/global.css
+++ b/src/global.css
@@ -13,7 +13,7 @@
 @font-face {
 	font-family: "Minecraft";
 	font-weight: bold;
-	src: url("/MinecraftBold.otf")
+	src: url("/MinecraftBold.otf") format("opentype");
 }
 
 @font-face {
