--- a/src/global.css
+++ b/src/global.css
@@ -37,8 +37,7 @@ body {
 	font-size: 18px;
 }
 
-.left-header-container,
-.right-header-container, .header-image, .search-player, .listing {
+.left-header-container, .right-header-container, .header-image, .search-player, .listing {
 	display: flex;
 	align-items: center;
 }
@@ -140,15 +139,6 @@ div.svelte-lef4ik {
 	text-align: left;
 }
 
-.infobox {
-	display: block;
-	background-color: #252525;
-	padding: 16px;
-	margin: 5px;
-	text-align: left;
-	border-radius: 15px;
-}
-
 .dim-8 {
 	color: #3c3c3c;
 }
@@ -177,32 +167,8 @@ div.svelte-lef4ik {
 	filter: saturate(0%) brightness(0.4);
 }
 
-
-
-.itemcontainer {
-z-index:10;
-display:inline-block;
-visibility:hidden;
-opacity:0;
-position:absolute;
-margin-top:39px;
-margin-left:-35px;
-transition:opacity .1s
-}
-.MinecraftInventory {
-color:#fff;
-display:inline-block
-}
-.count {
-position:absolute;
-font-family: Minecraft;
-color:#fff;
-margin-left:21px;
-margin-top:18px
-}
-
 @media screen {
-#perks {
-	padding-right: 0px;
-}
+	#perks {
+		padding-right: 0px;
+	}
 }
