--- a/src/global.css
+++ b/src/global.css
@@ -30,7 +30,7 @@
 
 body {
 	background-color: #1f1f1f;
-	font-family: 'Albert Sans';
+	font-family: "Albert Sans";
 	color: white;
 	margin: 0px;
 	padding: 0px;
